--- a/My Biography.html
+++ b/My Biography.html
@@ -28,8 +28,8 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p><P align="center">
-<img src="C:\Users\Pc User\Pictures\IMG-20190605-WA0006.jpg"height="300px">
-<img src="C:\Users\Pc User\Pictures\IMG-20190523-WA0029.jpg"height="300px">
+<img src="images/background"height="300px">
+<img src="images2/background"height="300px">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
