--- a/My Biography.html
+++ b/My Biography.html
@@ -28,7 +28,7 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p><P align="center">
-<img src="C:\Users\Pc User\Documents\BA232-2B\IMS456\biography\My Biography_files\nza.png"height="300px">
+<img src="images/background.png"height="300px">
 <img src="images2/background"height="300px">
 <p>
 	Click here to visit my instagram or github account.
