--- a/My Biography.html
+++ b/My Biography.html
@@ -29,7 +29,7 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 Oh, this is me by the way.
 <p><P align="center">
 <img src="C:\Users\Pc User\Pictures\IMG-20190605-WA0006.jpg"height="300px">
-<img src="C:\Users\Pc User\Pictures\Photoshoot\DSCN0889.JPG"height="300px">"height="300px">
+<img src="nza/backgroud.JPG"height="300px">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
