--- a/My Biography.html
+++ b/My Biography.html
@@ -2,8 +2,10 @@
 <html>
 
 	<head>
+		<Marquee behaviour="alternate">
 			<tittle><center><I><b><u><fontface="Algerian"><fontsize="26"><big><h1><font color="black"> MY PERSONAL BIOGRAPHY </tittle></I></b></u></font></font></font></big></h1></center>
-	</head>
+	</Marquee>
+			</head>
 <p>
 <br>
 <br>
