--- a/My Biography.html
+++ b/My Biography.html
@@ -30,8 +30,8 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p><P align="center">
-<img src="C:\Users\Pc User\Pictures\IMG-20190605-WA0006.jpg"height="300px">
-<img src="nza/backgroud.JPG"height="300px">
+<img src="images/background.jpg"height="300px">
+<img src="images/backgroud.JPG"height="300px">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
