--- a/My Biography.html.html
+++ b/My Biography.html.html
@@ -27,8 +27,8 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p></p><p align="center">
-<img src="images/backgroundjpg"height="300px">
-<img src="images/background.JPG"height="300px">
+<img src="C:\Users\Pc User\Pictures\IMG-20190605-WA0006.jpg"height="300px">
+<img src="C:\Users\Pc User\Pictures\Photoshoot\DSCN0889.JPG"height="300px">
 </p><p>
 	Click here to visit my instagram or github account.
 	</p><p>
