--- a/My Biography.html
+++ b/My Biography.html
@@ -31,7 +31,7 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 Oh, this is me by the way.
 <p><P align="center">
 <img src="IMG-20190523-WA0029.jpg/background.jpg"height="300px">
-<img src="https://github.com/NurZuehamizaArina/personal-website/blob/main/IMG-20190523-WA0029.jpg.JPG"height="300px">
+<img src="https://github.com/NurZuehamizaArina/personal-website/blob/main/IMG-20190523-WA0029.jpg"height="300px">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
