--- a/My Biography_files/My Biography.html.html
+++ b/My Biography_files/My Biography.html.html
@@ -17,7 +17,7 @@ In addition, I have <b>no problem with working in groups</b>, I believe I am <b>
 I <b> speak 3 languanges (Malay, English and Mandarin) fluently</b>.
 <br>
 Aside from language skills, I also <b> possess typing skills, documentation skills and basic computer skills </b>
-<p><p>
+<p><p><p align="center">
 	<br>
 <br>
 	
@@ -26,7 +26,7 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 	<li> Communication skills</li>
 	<li> Problem solving skills</li>
 	<li>Event management skills</li>
-	</b><br></P></p>
+	</b><br></P></p></P>
 Oh, this is me by the way.
 <p></p><p align="center">
 <img src="https://github.com/NurZuehamizaArina/personal-website/blob/main/My%20Biography_files/IMG-20190523-WA0029.jpg"height="300px">
