--- a/My Biography_files/My Biography.html.html
+++ b/My Biography_files/My Biography.html.html
@@ -15,8 +15,10 @@
 In addition, I have <b>no problem with working in groups</b>, I believe I am <b> good in cooperating</b> as I am very <b> commited and passionate</b> about completing any given task before its due date.
 <br>
 I <b> speak 3 languanges (Malay, English and Mandarin) fluently</b>.
-<br><p><P align="center">
-Aside from language skills, I also <b> possess typing skills, documentation skills and basic computer skills </b>
+<br>
+	<p>
+	<p><P align="center">
+Aside from language skills, I also <b> possess typing skills, documentation skills and basic computer skills </b></p></p>
 	<p><p></P>
 	<br>
 <br>
