--- a/My Biography_files/My Biography.html.html
+++ b/My Biography_files/My Biography.html.html
@@ -31,8 +31,8 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 	</b><br></P></p></P>
 Oh, this is me by the way.
 <p></p><p align="center">
-<img src="C:\Users\Pc User\Pictures\IMG-20190605-WA0006.jpg"height="300px">
-<img src="C:\Users\Pc User\Documents\BA232-2B\IMS456\biography\My Biography_files\IMG-20190523-WA0029.jpg"height="300px">
+<img src="My Biography_files\IMG-20190605-WA0006.jpg"height="300px">
+<img src="y Biography_files\IMG-20190523-WA0029.jpg"height="300px">
 </p><p>
 	Click here to visit my instagram or github account.
 	</p><p>
