--- a/My Biography_files/Biography.html
+++ b/My Biography_files/Biography.html
@@ -27,7 +27,7 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p></p><p align="center">
-<img src="C:\Users\Pc User\Documents\BA232-2B\IMS456\biography\My Biography_files\smpp.jpg"height="300px">
+<img src="My Biography_file\IMG-20190523-WA0029.jpg"height="300px">
 <img src="C:\Users\Pc User\Documents\BA232-2B\IMS456\biography\My Biography_files\myself.jpg"height="300px">
 </p><p>
 	Click here to visit my instagram or github account.
