--- a/My Biography.html
+++ b/My Biography.html
@@ -30,8 +30,8 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p><P align="center">
-<img src="myself.jpg"height="300px">
-<img src="IMG-20190523-WA0029"height="300px">
+<img src="myself.jpg.jpg"height="300px">
+<img src="IMG-20190523-WA0029.jpg"height="300px">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
