--- a/My Biography.html
+++ b/My Biography.html
@@ -31,7 +31,8 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 Oh, this is me by the way.
 <p><P align="center">
 	<img src="IMG-20190605-WA0006.jpg"height="300px">
-		<img src="IMG-20190523-WA0029.jpg"height="300px">		
+		<img src="IMG-20190523-WA0029.jpg"height="300px">
+		<img src="othmanian.jpg"height="300px">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
