--- a/My Biography.html
+++ b/My Biography.html
@@ -32,7 +32,7 @@ Oh, this is me by the way.
 <p><P align="center">
 	<img src="IMG-20190605-WA0006.jpg"height="300px">
 	<img src="IMG-20190523-WA0029.jpg"height="300px">
-		<img src="othmanian.jpg"height="300px">
+		<img src="IMG-20190605-WA0006.jpg"height="300px"BORDER="8">
 <p>
 	Click here to visit my instagram or github account.
 	<p>
