--- a/My Biography.html
+++ b/My Biography.html
@@ -30,7 +30,7 @@ As an ex-SMPP (Sekreteriat Majlis Perwakilan Pelajar) for two semester, I manage
 </b><br>
 Oh, this is me by the way.
 <p><P align="center">
-	<img src="IMG-20190605-WA0006.jpg"height="300px"BORDER="8">
+	<img src="IMG-20190605-WA0006.jpg"height="300px">
 	<img src="IMG-20190523-WA0029.jpg"height="300px">
 		<img src="IMG-20190605-WA0006.jpg"height="300px">
 <p>
