--- a/My Biography.html
+++ b/My Biography.html
@@ -39,5 +39,7 @@ Oh, this is me by the way.
 	<a href="https://www.instagram.com/nzarina_98">Go to Instagram</A>
 		<p>
 		<a href="hhttps://github.com/NurZuehamizaArina?tab=packages">Go to Github</A>
+			<p>
+				a href="https://github.com/NurZuehamizaArina">Go to Github</A>
 
 	</body></html>
