--- a/My Biography.html
+++ b/My Biography.html
@@ -40,6 +40,6 @@ Oh, this is me by the way.
 		<p>
 		<a href="hhttps://github.com/NurZuehamizaArina?tab=packages">Go to Github</A>
 			<p>
-				a href="https://github.com/NurZuehamizaArina">Go to Github</A>
+				<a href="https://github.com/NurZuehamizaArina">Go to Github</A>
 
 	</body></html>
