--- a/My Biography.html
+++ b/My Biography.html
@@ -34,12 +34,9 @@ Oh, this is me by the way.
 	<img src="IMG-20190523-WA0029.jpg"height="300px">
 		<img src="IMG-20190605-WA0006.jpg"height="300px">
 <p>
-	Click here to visit my instagram or github account.
+	Click here to visit my instagram account.
 	<p>
 	<a href="https://www.instagram.com/nzarina_98">Go to Instagram</A>
-		<p>
-		<a href="hhttps://github.com/NurZuehamizaArina?tab=packages">Go to Github</A>
-			<p>
-				<a href="https://github.com/NurZuehamizaArina">Go to Github</A>
+		
 
 	</body></html>
