--- a/My Biography.html
+++ b/My Biography.html
@@ -34,7 +34,7 @@ Oh, this is me by the way.
 	<img src="IMG-20190523-WA0029.jpg"height="300px">
 		<img src="IMG-20190605-WA0006.jpg"height="300px">
 <p>
-	Click here to visit my instagram account.
+	Please lick here to visit my instagram account.
 	<p>
 	<a href="https://www.instagram.com/nzarina_98">Go to Instagram</A>
 		
